--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
     <meta name="enot" content="2711661027304-4JAWtz1klkwD9PPx1bQysLMA96xncAI">
     <!--prime:64246542-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Warthrone - The Return of the King</title>
+    <title>Proyecto Vanguard</title>
 	<link data-react-helmet="true" rel="shortcut icon" type="image/png" href="img/favicon.png">
 	<!-- Google -->
 	<meta name="description" content="Project Essence invites you to experience the largest and most anticipated launch of the year, this Winter!">
@@ -189,7 +189,7 @@
 
             <div class="langs">
                 <div class="selected">
-                    EN
+                    ES
                 </div>
                 <ul>
                     <li class="lang_selector" data-value="en">EN</li>
